<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Felix Launcher</string>
    <string name="app_desc">This app is designed to extend the battery life of a device by using the smallest, least power-hogging setup possible while still providing a quick and easy way to open apps and not completely sacrificing design. This app is 6.3 megabytes. Compared to most other home screens that implement extensive theming options, this could dramatically increase the overall battery life and performance of a phone.</string>

    <string name="home">Home</string>
    <string name="clock">Clock</string>
    <string name="apps">Apps</string>
    <string name="favorites">Favorites</string>
    <string name="about">About</string>
    <string name="dark_text">Dark Text</string>
    <string name="show_wallpaper">Show Wallpaper</string>
    <string name="set_wallpaper">Set Wallpaper</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="next_alarm">Next Alarm: %1$s</string>
    <string name="add_favorites">Add to Favorites</string>
    <string name="set_hidden">Set Hidden</string>
    <string name="play_store">Open in Play Store</string>
    <string name="settings">Settings</string>
    <string name="search_hint">Enter search query…</string>
    <string name="hidden_apps">Hidden Apps</string>
    <string name="favorites_remove">Remove from Favorites</string>
    <string name="set_visible">Set Visible</string>
    <string name="humidity">Humidity: %1$d</string>
    <string name="temperature">%1$.1f°C  %2$.1f°F</string>

    <string name="weather_clear">Clear Sky</string>
    <string name="weather_foggy">Fog</string>
    <string name="weather_cloudy">Cloudy Sky</string>
    <string name="weather_hazy">Hazy</string>
    <string name="weather_icy">Icy</string>
    <string name="weather_rainy">Rain</string>
    <string name="weather_snowy">Snow</string>
    <string name="weather_stormy">Storms</string>
    <string name="weather_windy">Windy</string>
    <string name="weather_failed">Couldn\'t get weather.</string>

    <string name="activity_walking">Walking</string>
    <string name="activity_running">Running</string>
    <string name="activity_biking">Biking</string>
    <string name="activity_driving">Driving</string>
</resources>