<layout>
    <data>

        <import type="com.james.felixlauncher.activities.SettingsActivity" />
    </data>

    <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_gravity="top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:focusable="true"
                android:elevation="2dp"
                card_view:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:focusable="false"
                    android:visibility="visible">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/about"
                        android:textSize="20sp"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:background="@color/colorAccent"
                        android:textColor="?android:textColorPrimaryInverse" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_desc"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="16dp"
                        android:textColor="?android:textColorSecondary"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.SwitchCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/darktext"
                android:text="@string/dark_text"
                android:checked="@{SettingsActivity.isTextDark(context)}"
                android:padding="16dp" />

            <android.support.v7.widget.SwitchCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/wallpaper"
                android:text="@string/show_wallpaper"
                android:checked="@{SettingsActivity.isWallpaper(context)}"
                android:padding="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:id="@+id/setwallpaper"
                android:text="@string/set_wallpaper"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:background="?attr/selectableItemBackground"
                android:textColor="?android:textColorPrimary" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
</layout>
