<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorOverlay"
        android:id="@+id/toolbar"
        app:title="" />

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_gravity="bottom"
        android:background="@color/colorOverlay"
        android:baselineAligned="false" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:id="@+id/clock">

            <com.james.felixlauncher.views.SquareImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_clock"
                android:scaleType="center"
                android:id="@+id/clockImage"
                android:tint="?android:textColorSecondary"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clock"
                android:id="@+id/clockText"
                android:layout_gravity="center_horizontal|bottom"
                android:textColor="?android:textColorSecondary"
                android:textSize="0sp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:id="@+id/apps">

            <com.james.felixlauncher.views.SquareImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_apps"
                android:scaleType="center"
                android:tint="@color/colorAccent"
                android:id="@+id/appsImage"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apps"
                android:id="@+id/appsText"
                android:layout_gravity="center_horizontal|bottom"
                android:textColor="@color/colorAccent" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:gravity="center_vertical"
            android:id="@+id/fav">

            <com.james.felixlauncher.views.SquareImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_fav"
                android:scaleType="center"
                android:id="@+id/favImage"
                android:tint="?android:textColorSecondary"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favorites"
                android:id="@+id/favText"
                android:layout_gravity="center_horizontal|bottom"
                android:textColor="?android:textColorSecondary"
                android:textSize="0sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
